updated examples to confirm to current template and edited descriptions

--- a/examples/menu-button/menu-button-1/menu-button-1.html
+++ b/examples/menu-button/menu-button-1/menu-button-1.html
@@ -25,7 +25,7 @@
       </p>
       <p>Similar examples include: </p>
       <ul>
-        <li><a href="../menu-button-2/menu-button-2.html">Menu Button Example: Links</a>: The popup menu items are <code>a</code> elements and act as links.</li>
+        <li><a href="../menu-button-2/menu-button-2.html">Navigation Menu Button</a>: The popup menu items are <code>a</code> elements and act as links.</li>
       </ul>
       <section>
         <h2 id="ex_label">Example</h2>
@@ -91,12 +91,12 @@
           <tbody>
             <tr>
             <tr>
-              <td><kbd>Down Arrow, <br/>Space, <br/>or Enter</kbd></td>
+              <th><kbd>Down Arrow, <br/>Space, <br/>or Enter</kbd></th>
               <td>Open <code>menu</code> and move focus to first <code>menuitem</code></td>
             </tr>
             </tr>
             <tr>
-              <td><kbd>Up Arrow Key</kbd></td>
+              <th><kbd>Up Arrow Key</kbd></th>
               <td>Open <code>menu</code> and move focus to previous <code>menuitem</code></td>
             </tr>
           </tbody>
@@ -113,7 +113,7 @@
           </thead>
           <tbody>
             <tr>
-              <td><kbd>Space or Enter</kbd></td>
+              <th><kbd>Space or Enter</kbd></th>
               <td>
                 <ul>
                   <li>Activates any <code>click</code> event associated with the <code>menuitem</code>.  In this example updates the "Last Action" textbox.</li>
@@ -122,7 +122,7 @@
               </td>
             </tr>
             <tr>
-              <td><kbd>Escape</kbd></td>
+              <th><kbd>Escape</kbd></th>
               <td>
                 <ul>
                   <li>Closes popup menu.</li>
@@ -131,7 +131,7 @@
               </td>
             </tr>
             <tr>
-              <td><kbd>Up Arrow</kbd></td>
+              <th><kbd>Up Arrow</kbd></th>
               <td>
                 <ul>
                   <li>Moves focus to previous popup menu item.</li>
@@ -140,7 +140,7 @@
               </td>
             </tr>
              <tr>
-              <td><kbd>Down Arrow</kbd></td>
+              <th><kbd>Down Arrow</kbd></th>
               <td>
                 <ul>
                   <li>Moves focus to next popup menu item.</li>
@@ -149,7 +149,7 @@
               </td>
             </tr>
             <tr>
-              <td><kbd>Home</kbd></td>
+              <th><kbd>Home</kbd></th>
               <td>
                 <ul>
                   <li>Moves focus to first popup menu item.</li>
@@ -157,7 +157,7 @@
               </td>
             </tr>
             <tr>
-              <td><kbd>End</kbd></td>
+              <th><kbd>End</kbd></th>
               <td>
                 <ul>
                   <li>Moves focus to last popup menu item.</li>
@@ -165,7 +165,7 @@
               </td>
             </tr>
             <tr>
-              <td><kbd>A-Z, a-z</kbd></td>
+              <th><kbd>A-Z, a-z</kbd></th>
               <td>
                 <ul>
                   <li>Moves focus to the next popup item that starts with that letter.</li>
@@ -194,9 +194,9 @@
           </thead>
           <tbody>
             <tr>
-              <td>
+              <th scope="row">
                 <code>button</code>
-              </td>
+              </th>
               <td></td>
               <td>
                 <code>button</code>
@@ -213,7 +213,7 @@
               <td>
                 <code></code>
               </td>
-              <td><code>aria-haspopup=&quot;true&quot;</code></td>
+              <th scope="row"><code>aria-haspopup=&quot;true&quot;</code></th>
               <td>
                 <code>button</code>
               </td>
@@ -227,7 +227,7 @@
               <td>
                 <code></code>
               </td>
-              <td><code>aria-controls=&quot;IDREF&quot;</code></td>
+              <th scope="row"><code>aria-controls=&quot;IDREF&quot;</code></th>
               <td>
                 <code>button</code>
               </td>
@@ -239,7 +239,7 @@
             </tr>
             <tr>
                 <td></td>
-                <td><code>aria-expanded=&quot;true&quot;</code></td>
+                <th scope="row"><code>aria-expanded=&quot;true&quot;</code></th>
                 <td><code>button</code></td>
                 <td>
                   <ul>
@@ -249,7 +249,7 @@
             </tr>
             <tr>
                 <td></td>
-                <td><code>aria-expanded=&quot;false&quot;</code></td>
+                <th scope="row"><code>aria-expanded=&quot;false&quot;</code></th>
                 <td><code>button</code></td>
                 <td>
                   <ul>
@@ -273,9 +273,9 @@
           </thead>
           <tbody>
             <tr>
-              <td>
+              <th scope="row">
                 <code>menu</code>
-              </td>
+              </th>
               <td></td>
               <td>
                 <code>ul</code>
@@ -292,7 +292,7 @@
               <td>
                 <code></code>
               </td>
-              <td><code>aria-labelledby=&quot;[IDREF]&quot;</code></td>
+              <th scope="row"><code>aria-labelledby=&quot;[IDREF]&quot;</code></th>
               <td>
                 <code>ul</code>
               </td>
@@ -303,9 +303,9 @@
               </td>
             </tr>
             <tr>
-              <td>
+              <th scope="row">
                 <code>menuitem</code>
-              </td>
+              </th>
               <td></td>
               <td>
                 <code>li</code>
@@ -322,7 +322,7 @@
               <td>
                 <code></code>
               </td>
-              <td><code>tabindex=&quot;-1&quot;</code></td>
+              <th scope="row"><code>tabindex=&quot;-1&quot;</code></th>
               <td>
                 <code>li</code>
               </td>
