Update radio button examples to use current example template

--- a/examples/radio/radio-1/radio-1.html
+++ b/examples/radio/radio-1/radio-1.html
@@ -114,7 +114,7 @@
         </thead>
         <tbody>
           <tr>
-            <td><kbd>Tab</kbd></td>
+            <th><kbd>Tab</kbd></th>
             <td>
               <ul>
                 <li>Moves keyboard focus to the checked <code>radio</code> button in a <code>radiogroup</code>.</li>
@@ -123,7 +123,7 @@
             </td>
           </tr>
           <tr>
-            <td><kbd>Space</kbd></td>
+            <th><kbd>Space</kbd></th>
             <td>
               <ul>
                 <li>If the <code>radio</code> button with focus is unchecked, it's state will be changed to checked.</li>
@@ -131,7 +131,7 @@
             </td>
           </tr>
           <tr>
-            <td><kbd>Down arrow</kbd></td>
+            <th><kbd>Down arrow</kbd></th>
             <td>
               <ul>
                 <li>Moves focus to next <code>radio</code> button in the group.</li>
@@ -140,7 +140,7 @@
             </td>
           </tr>
           <tr>
-            <td><kbd>Up arrow</kbd></td>
+            <th><kbd>Up arrow</kbd></th>
             <td>
               <ul>
                 <li>Moves focus to previous <code>radio</code> button in the group.</li>
@@ -164,7 +164,7 @@
         </thead>
         <tbody>
           <tr>
-            <td><code>radiogroup</code></td>
+            <th scope="row"><code>radiogroup</code></th>
             <td></td>
             <td><code>div</code></td>
             <td>
@@ -178,7 +178,7 @@
           </tr>
           <tr>
             <td></td>
-            <td><code>aria-labelledby=&quot;[IDREF]&quot;</code></td>
+            <th scope="row"><code>aria-labelledby=&quot;[IDREF]&quot;</code></th>
             <td><code>div</code></td>
             <td>
                  <ul>
@@ -187,7 +187,7 @@
             </td>
           </tr>  
           </tr>
-            <td><code>radio</code></td>
+            <th scope="row"><code>radio</code></th>
             <td></td>
             <td><code>div</code></td>
             <td>
@@ -201,7 +201,7 @@
           </tr>
           <tr>
             <td></td>
-            <td><code>tabindex=&quot;-1&quot;</code></td>
+            <th scope="row"><code>tabindex=&quot;-1&quot;</code></th>
             <td><code>div</code></td>
             <td>
                 <ul>
@@ -212,7 +212,7 @@
           </tr>
           <tr>
             <td></td>
-            <td><code>tabindex=&quot;0&quot;</code></td>
+            <th scope="row"><code>tabindex=&quot;0&quot;</code></th>
             <td><code>div</code></td>
             <td>
                 <ul>
@@ -223,7 +223,7 @@
           </tr>
           <tr>
             <td></td>
-            <td><code>aria-checked=&quot;false&quot;</code></td>
+            <th scope="row"><code>aria-checked=&quot;false&quot;</code></th>
             <td><code>div</code></td>
             <td>
                 <ul>
@@ -235,7 +235,7 @@
           </tr>
           <tr>
             <td></td>
-            <td><code>aria-checked=&quot;true&quot;</code></td>
+            <th scope="row"><code>aria-checked=&quot;true&quot;</code></th>
             <td><code>div</code></td>
             <td>
                 <ul>
