--- a/examples/radio/radio-1/radio-1.html
+++ b/examples/radio/radio-1/radio-1.html
@@ -17,7 +17,7 @@
     <main role="main">
       <h1>Radio Button Example</h1>
 
-     <p>This example implements the features of an ARIA <code>radiogroup</code> widget using <a href="../../../#radiobutton">Radio Button Design Pattern</a> for selecting a pizza crust and delivery method.</p>
+     <p>This example implements the features of the <a href="../../../#radiobutton">Radio Button Design Pattern</a> for selecting a pizza crust and delivery method.</p>
 
       <p>Similar examples include: </p>
       <ul>
