--- a/examples/checkbox/checkbox-1/checkbox-1.html
+++ b/examples/checkbox/checkbox-1/checkbox-1.html
@@ -16,11 +16,11 @@
   <main>
     <h1>Checkbox Example (Two State)</h1>
 
-    <p>Example of a simple two-state checkbox that implements the  <a href="../../../#checkbox">Checkbox Design Pattern</a> using <code>div</code> elements.</p>
+    <p>This example implements the  <a href="../../../#checkbox">Checkbox Design Pattern</a> for a two state checkbox using <code>div</code> elements.</p>
 
     <p>Similar examples include: </p>
     <ul>
-      <li><a href="../checkbox-2/checkbox-2.html">Checkbox Example (Mixed State)</a>: Mixed state checkbox controlling standard input checkboxes.</li>
+      <li><a href="../checkbox-2/checkbox-2.html">Checkbox (Mixed State)</a>: Mixed state checkbox controlling standard input checkboxes.</li>
       <!--  list other examples that implement the same design pattern. -->
     </ul>
 
@@ -67,7 +67,7 @@
           </thead>
           <tbody>
           <tr>
-            <td><kbd>Tab</kbd></td>
+            <th><kbd>Tab</kbd></th>
             <td>
               <ul>
                 <li>Moves keyboard focus to the <code>checkbox</code>.</li>
@@ -75,7 +75,7 @@
             </td>
           </tr>
             <tr>
-              <td><kbd>Space</kbd>, <br/> or <kbd>Enter</kbd></td>
+              <th><kbd>Space</kbd>, <br/> or <kbd>Enter</kbd></th>
               <td>
                 <ul>
                   <li>Toggle check checkbox between checked and unchecked.</li>  
@@ -105,7 +105,7 @@
               <td>
                 <ul>
                   <li>The <code>role=&quot;checkbox&quot;</code> attribute identifies the <code>div</code> element as a ARIA <code>checkbox</code>.</li>
-                  <li>The accessible name comes the child text content of the <code>div[role=&quot;checkbox&quot; element.</li>
+                  <li>The accessible name comes the child text content of the <code>div[role=&quot;checkbox&quot;]</code> element.</li>
                   <li>The <code>checkbox</code> widget needs a <code>tabindex=&quot;0&quot;</code> value.</li>
                 </ul> 
               </td>
@@ -126,9 +126,9 @@
               <td><code>div</code></td>
               <td>
                   <ul>
-                    <li>Indentifies the <code>checkbox</code> button is <strong>not</strong> checked.</li>
-                    <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;false&quote;]</code>) are used to synchronize the visual states with the value of the <code>aria-checked</code> attribute.</li>
-                    <li>The CSS <code>:before</code> psuedo selector and the <code>content</code> property is used to indcate visual state of unchecked to support high contrast setting in operating systems and browsers.</li>
+                    <li>Indentifies the <code>checkbox</code> button as unchecked.</li>
+                    <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;false&quot;]</code>) are used to synchronize the visual states with the value of the <code>aria-checked</code> attribute.</li>
+                    <li>The CSS <code>:before</code> psuedo selector and the <code>content</code> property are used to indcate visual state of "unchecked" to support high contrast setting in operating systems and browsers.</li>
                   </ul>  
               </td>
             </tr>
@@ -138,9 +138,9 @@
               <td><code>div</code></td>
               <td>
                   <ul>
-                    <li>Indentifies the <code>checkbox</code> is checked.</li>
-                    <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;ture&quote;]</code>) are used to synchronize the visual states with the value of the <code>aria-checked</code> attribute.</li>
-                    <li>The CSS <code>:before</code> psuedo selector and the <code>content</code> property is used to indcate visual state of checked to support high contrast setting in operating systems and browsers.</li>
+                    <li>Indentifies the <code>checkbox</code> as checked.</li>
+                    <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;true&quot;]</code>) are used to synchronize the visual states with the value of the <code>aria-checked</code> attribute.</li>
+                    <li>The CSS <code>:before</code> psuedo selector and the <code>content</code> property are used to indcate visual state of "checked" to support high contrast setting in operating systems and browsers.</li>
                   </ul>  
               </td>
             </tr>
