--- a/examples/checkbox/checkbox-2/checkbox-2.html
+++ b/examples/checkbox/checkbox-2/checkbox-2.html
@@ -17,11 +17,11 @@
     <main>
       <h1>Checkbox Example (Mixed State)</h1>
 
-      <p>Example of a mixed state checkbox that implements the  <a href="../../../#checkbox">Checkbox Design Pattern</a> using <code>div</code> element for the mixed state checkbox with a set of standard HTML checkboxes.   This example also uses <code>fieldset/Legend</code> elements to provide a grouping label for the checkboxes since the checkboxes are related to each other.</p>
+      <p>This example implements the  <a href="../../../#checkbox">Checkbox Design Pattern</a> using <code>div</code> element for a mixed state checkbox used in conjunction with a set of standard HTML checkboxes.   This example also uses <code>fieldset/Legend</code> elements to provide a grouping label for the checkboxes since the checkboxes are related to each other.</p>
 
       <p>Similar examples include: </p>
       <ul>
-        <li><a href="../checkbox-1/checkbox-1.html">Checkbox Example (Two State)</a>: Simple two state checkbox.</li>
+        <li><a href="../checkbox-1/checkbox-1.html">Checkbox (Two State)</a>: Simple two state checkbox.</li>
         <!--  list other examples that implement the same design pattern. -->
       </ul>
 
@@ -100,19 +100,19 @@
             </tr>
           </thead>
           <tbody>
-            <td><kbd>Tab</kbd></td>
+            <th><kbd>Tab</kbd></th>
             <td>
               <ul>
-                <li>Moves keyboard focus to the <code>checkbox</code>.</li>
+                <li>Moves keyboard focus to the checkbox.</li>
               </ul>  
             </td>
             <tr>
-              <td><kbd>Space</kbd>, <br/> or <kbd>Enter</kbd></td>
+              <th><kbd>Space</kbd>, <br/> or <kbd>Enter</kbd></th>
               <td>
                 <ul>
                   <li>Toggle the checkbox between unchecked, mixed and checked.</li>  
                   <li>When the checkbox is unchecked, all the controlled checkboxes will be unchecked.</li>
-                  <li>When the checkbox is mixed, all the controlled checkboxes will return to the last state the user selected for that checkbox.</li>
+                  <li>When the checkbox is mixed, all the controlled checkboxes will return to the last state the user selected for that particular checkbox or the default state when the page was loaded.</li>
                   <li>When the checkbox is checked, all the controlled checkboxes will be checked.</li>
                 </ul>  
               </td>
@@ -136,73 +136,73 @@
           </thead>
           <tbody>
               <tr>
-                <td><code>checkbox</code></td>
+                <th scope="row"><code>checkbox</code></th>
                 <td></td>
                 <td><code>div</code></td>
                 <td>
                   <ul>
                     <li>The <code>role=&quot;checkbox&quot;</code> attribute identifies the <code>div</code> element as a ARIA <code>checkbox</code>.</li>
-                    <li>The accessible name comes the child text content of the <code>div[role=&quot;checkbox&quot; element.</li>
+                    <li>The accessible name comes the child text content of the <code>div[role=&quot;checkbox&quot;]</code> element.</li>
                     <li>The <code>checkbox</code> widget needs a <code>tabindex=&quot;0&quot;</code> value.</li>
                   </ul> 
                 </td>
               </tr>
               <tr>
                 <td></td>
-                <td><code>tabindex=&quot;0&quot;</code></td>
+                <th scope="row"><code>tabindex=&quot;0&quot;</code></th>
                 <td><code>div</code></td>
                 <td>
                     <ul>
-                      <li>The <code>div[&quot;checkbox&quot;]</code> is identified as an ineractive element and is added to the tab order of the page by setting the <code>tabindex=&quot;0&quot;</code>.</li>
+                      <li>The <code>div[&quot;checkbox&quot;]</code> is identified as an interactive element and is added to the tab order of the page by setting the <code>tabindex=&quot;0&quot;</code>.</li>
                      </ul>  
                 </td>
               </tr>
               <tr>
                 <td></td>
-                <td><code>aria-controls=&quot;[IDREFS]&quot;</code></td>
+                <th scope="row"><code>aria-controls=&quot;[IDREFS]&quot;</code></th>
                 <td><code>div</code></td>
                 <td>
                     <ul>
-                      <li>A list of <code>IDREF</code>s identifying which checkboxes are controlled by the mixed checkbox.</li>
+                      <li>A list of <code>IDREF</code>s identifies which checkboxes are controlled by the mixed checkbox.</li>
                     </ul>  
                 </td>
               </tr>
               <tr>
                 <td></td>
-                <td><code>aria-checked=&quot;false&quot;</code></td>
+                <th scope="row"><code>aria-checked=&quot;false&quot;</code></th>
                 <td><code>div</code></td>
                 <td>
                     <ul>
-                      <li>Indentifies the <code>checkbox</code> button is <strong>not</strong> unchecked.</li>
-                      <li>This state reflects that the controlled checkboxes are all unchecked.</li>
-                      <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;false&quote;]</code>) are used to synchronize the visual states with the value of the <code>aria-checked</code> attribute.</li>
-                      <li>The CSS <code>:before</code> psuedo selector and the <code>content</code> property is used to indcate visual state of unchecked to support high contrast setting in operating systems and browsers.</li>
+                      <li>Indentifies the <code>checkbox</code> button as <strong>not</strong> unchecked.</li>
+                      <li>This state reflects that all the controlled checkboxes are unchecked.</li>
+                      <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;false&quot;]</code>) are used to synchronize the visual states with the value of the <code>aria-checked</code> attribute.</li>
+                      <li>The CSS <code>:before</code> psuedo selector and the <code>content</code> property are used to indcate visual state of "unchecked" to support high contrast setting in operating systems and browsers.</li>
                     </ul>  
                 </td>
               </tr>
               <tr>
                 <td></td>
-                <td><code>aria-checked=&quot;true&quot;</code></td>
+                <th scope="row"><code>aria-checked=&quot;true&quot;</code></th>
                 <td><code>div</code></td>
                 <td>
                     <ul>
-                      <li>Indentifies the <code>checkbox</code> is checked.</li>
-                      <li>This state reflects that the controlled checkboxes are all checked.</li>
-                      <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;ture&quote;]</code>) are used to synchronize the visual states with the value of the <code>aria-checked</code> attribute.</li>
-                      <li>The CSS <code>:before</code> psuedo selector and the <code>content</code> property is used to indcate visual state of checked to support high contrast setting in operating systems and browsers.</li>
+                      <li>Indentifies the <code>checkbox</code> as checked.</li>
+                      <li>This state reflects that all the controlled checkboxes are checked.</li>
+                      <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;true&quot;]</code>) are used to synchronize the visual states with the value of the <code>aria-checked</code> attribute.</li>
+                      <li>The CSS <code>:before</code> psuedo selector and the <code>content</code> property are used to indcate visual state of "checked" to support high contrast setting in operating systems and browsers.</li>
                     </ul>  
                 </td>
               </tr>
               <tr>
                 <td></td>
-                <td><code>aria-checked=&quot;mixed&quot;</code></td>
+                <th scope="row"><code>aria-checked=&quot;mixed&quot;</code></th>
                 <td><code>div</code></td>
                 <td>
                     <ul>
-                      <li>Indentifies the <code>checkbox</code> is mixed.</li>
+                      <li>Indentifies the <code>checkbox</code> as mixed.</li>
                       <li>This state reflects that some of controlled checkboxes are all checked and some are not checked.</li>
-                      <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;ture&quote;]</code>) are used to synchronize the visual states with the value of the <code>aria-checked</code> attribute.</li>
-                      <li>The CSS <code>:before</code> psuedo selector and the <code>content</code> property is used to indcate visual state of checked to support high contrast setting in operating systems and browsers.</li>
+                      <li>CSS attribute selectors (e.g. <code>[aria-checked=&quot;mixed&quot;]</code>) are used to synchronize the visual states with the value of the <code>aria-checked</code> attribute.</li>
+                      <li>The CSS <code>:before</code> psuedo selector and the <code>content</code> property are used to indcate visual state of "mixed" to support high contrast setting in operating systems and browsers.</li>
                     </ul>  
                 </td>
               </tr>
