updated table in checkbox-1 example to fix bug in template

--- a/examples/checkbox/checkbox-1/checkbox-1.html
+++ b/examples/checkbox/checkbox-1/checkbox-1.html
@@ -99,7 +99,7 @@
         </thead>
         <tbody>
             <tr>
-              <td><code>checkbox</code></td>
+              <th scope="row"><code>checkbox</code></th>
               <td></td>
               <td><code>div</code></td>
               <td>
@@ -112,7 +112,7 @@
             </tr>
             <tr>
               <td></td>
-              <td><code>tabindex=&quot;0&quot;</code></td>
+              <th scope="row"><code>tabindex=&quot;0&quot;</code></th>
               <td><code>div</code></td>
               <td>
                   <ul>
@@ -122,7 +122,7 @@
             </tr>
             <tr>
               <td></td>
-              <td><code>aria-checked=&quot;false&quot;</code></td>
+              <th scope="row"><code>aria-checked=&quot;false&quot;</code></th>
               <td><code>div</code></td>
               <td>
                   <ul>
@@ -134,7 +134,7 @@
             </tr>
             <tr>
               <td></td>
-              <td><code>aria-checked=&quot;true&quot;</code></td>
+              <th scope="row"><code>aria-checked=&quot;true&quot;</code></th>
               <td><code>div</code></td>
               <td>
                   <ul>
