--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -173,9 +173,9 @@
         </tr>
         <tr>
           <td></td>
-          <td>
+          <th scope="row">
             <code>tabindex=&quot;0&quot;</code>
-          </td>
+          </th>
           <td>
             <code>div</code>, <code>span</code>, or <code>a</code>
           </td>
