--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -15,8 +15,8 @@
 
   <p>
     Creating Buttons using <code>role=button</code> following the <a href="../../#h-button">Button Design Patten</a>.
-    The following examples are composed using a <code>div</code> and <code>span</code> elements
-    functioning as a native <code>button</code> element, and an <code>a</code> element that functions as a
+    The following examples are composed using a <code>div</code> and <code>a</code> elements
+    functioning as a native <code>button</code> element, and an <code>span</code> element that functions as a
     toggle button.    
   </p>
 
@@ -191,7 +191,7 @@
         <tr>
           <td></td>
           <th scope="row"><code>aria-pressed=&quot;false&quot;</code></th>
-          <td><code>a</code></td>
+          <td><code>span</code></td>
           <td>
             <ul>
               <li>Identify element with the toggle button behavior and toggled off</li>
@@ -201,7 +201,7 @@
         <tr>
           <td></td>
           <th scope="row"><code>aria-pressed=&quot;true&quot;</code></th>
-          <td><code>a</code></td>
+          <td><code>span</code></td>
           <td>
             <ul>
               <li>Identify element with the toggle button behavior and toggled on</li>
