--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -159,7 +159,7 @@
           <th scope="row"><code>button</code></th>
           <td></td>
           <td>
-            <code>div</code>, <code>span</code>, or <code>a</code>
+            <code>div</code>, <code>span</code>, <code>a</code>
           </td>
           <td>
             <ul>
@@ -177,7 +177,7 @@
             <code>tabindex=&quot;0&quot;</code>
           </th>
           <td>
-            <code>div</code>, <code>span</code>, or <code>a</code>
+            <code>div</code>, <code>span</code>, <code>a</code>
           </td>
           <td>
             <ul>
