--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -36,7 +36,7 @@
           <tr>
             <th>Type</th>
             <th>Element</th>
-            <th>Button</th>
+            <th style="width: 8em;">Button</th>
             <th>Accessibility Feature</th>
           </tr>
         </thead>
