--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -194,7 +194,7 @@
           <td><code>span</code></td>
           <td>
             <ul>
-              <li>Identify element with the toggle button behavior and toggled off</li>
+              <li>Identify <code>span</code> element with the toggle button behavior as toggled off</li>
             </ul>
           </td>
         </tr>
@@ -204,7 +204,7 @@
           <td><code>span</code></td>
           <td>
             <ul>
-              <li>Identify element with the toggle button behavior and toggled on</li>
+              <li>Identify <code>span</code> element with the toggle button behavior as toggled on</li>
             </ul>
           </td>
         </tr>
