--- a/examples/button/button.html
+++ b/examples/button/button.html
@@ -16,7 +16,7 @@
   <p>
     Creating Buttons using <code>role=button</code> following the <a href="../../#h-button">Button Design Patten</a>.
     The following examples are composed using a <code>div</code> and <code>a</code> elements
-    functioning as a native <code>button</code> element, and an <code>span</code> element that functions as a
+    functioning as a native <code>button</code> element, and a <code>span</code> element that functions as a
     toggle button.    
   </p>
 
